# nes_simulation_starter_rs

./: 3_layer_topology.json  Cargo.toml
1h_dublin_bus_nanosec/: vehicle33119_from1357128000000000_to1357131600000000.csv  vehicle33158_from1357128000000000_to1357131600000000.csv  vehicle33268_from1357128000000000_to1357131600000000.csv  vehicle33556_from1357128000000000_to1357131600000000.csv  vehicle33600_from1357128000000000_to1357131600000000.csv  vehicle36034_from1357128000000000_to1357131600000000.csv  vehicle38014_from1357128000000000_to1357131600000000.csv  vehicle38040_from1357128000000000_to1357131600000000.csv  vehicle38050_from1357128000000000_to1357131600000000.csv  vehicle40044_from1357128000000000_to1357131600000000.csv
join_experiments/synthetic_2_src_2_change_per_query_sec_120_runtime_10sec_freq/: 2src_2change_10sec_120sec.toml  fixed_topology.json  source_groups.json  topology_updates.json
join_experiments/synthetic_2_src_2_change_per_query_sec_120_runtime_1sec_freq/: fixed_topology.json  source_groups.json
join_experiments/synthetic_2_src_2_change_per_query_sec_30_runtime_10sec_freq/: 2src_2change_10sec_30sec.toml  fixed_topology.json  source_groups.json  topology_updates.json
join_experiments/synthetic_2_src_2_change_per_query_sec_30_runtime_1sec_freq/: 2src_2change_1sec_30sec.toml  fixed_topology.json  source_groups.json  topology_updates.json
join_experiments/synthetic_2_src_no_change/: 2src_1change_1sec.toml  2src_no_change.toml  topology_updates.json
mobile_configs/: vehicle33119_from1357128000000000_to1357131600000000.csv.yaml  vehicle33158_from1357128000000000_to1357131600000000.csv.yaml  vehicle33268_from1357128000000000_to1357131600000000.csv.yaml  vehicle33556_from1357128000000000_to1357131600000000.csv.yaml  vehicle33600_from1357128000000000_to1357131600000000.csv.yaml  vehicle36034_from1357128000000000_to1357131600000000.csv.yaml  vehicle38014_from1357128000000000_to1357131600000000.csv.yaml  vehicle38040_from1357128000000000_to1357131600000000.csv.yaml  vehicle38050_from1357128000000000_to1357131600000000.csv.yaml  vehicle40044_from1357128000000000_to1357131600000000.csv.yaml
src/: MobileDeviceQuadrants.rs  createMobileConfigsFromTrajectories.rs  lib.rs  lib_stateful.rs  lib_stateless.rs  main.rs  precalculate_reconnects.rs  precalculate_reconnects_from_topology_json.rs  rest_node_relocation.rs  stateful_simulation.rs  stateless_simulation.rs  tcp_input_server.rs  test_input_server.rs  timestamp_reconnect_list.rs
(+9 files in other folders)
