[package]
name = "simulation_runner_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.0", features = ["termination"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
text_io = "0.1.12"
yaml-rust = "0.4.5"
