[package]
name = "simulation_runner_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulation_runner_lib"
path = "src/lib.rs"

[[bin]]
name = "start_experiment"
path = "src/main.rs"

[[bin]]
name = "tcp_input_server"
path = "src/tcp_input_server.rs"

[[bin]]
name = "precalculate_reconnects"
path = "src/precalculate_reconnects.rs"

[[bin]]
name = "precalculate_reconnects_from_topology_json"
path = "src/precalculate_reconnects_from_topology_json.rs"

[[bin]]
name = "create_mobile_configs_from_trajectories"
path = "src/createMobileConfigsFromTrajectories.rs"

[[bin]]
name = "get_random_number_range"
path = "src/get_random_number_range.rs"

[[bin]]
name = "timestamp_reconnect_list"
path = "src/timestamp_reconnect_list.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.0", features = ["termination"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
text_io = "0.1.12"
yaml-rust = "0.4.5"
nes_tools = {path = "../nes_tools"}
csv = "1.3.0"
toml = "0.8.8"
chrono = "0.4.32"
serde_with = { version = "3.5.1", features = ["chrono_0_4"] }
tokio = "1.28.2"
rand = "0.8.5"
